--- a/QuickPollUI/Components/CreatePollForm.razor
+++ b/QuickPollUI/Components/CreatePollForm.razor
@@ -207,6 +207,10 @@
 
 <style>
 
+    label {
+        font-weight: 700;
+    }
+
     .remove-option-btn-container {
         position: absolute;
         margin-top: .25em;
