--- a/QuickPollUI/Shared/Card.razor
+++ b/QuickPollUI/Shared/Card.razor
@@ -11,6 +11,12 @@
         border-radius: 6px;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.6);
     }
+
+    @@media(max-width: 1100px) {
+        .card {
+            margin: 1em auto;
+        }
+    }
 </style>
 
 @code {
