--- a/QuickPollUI/Components/CountDownTimer.razor
+++ b/QuickPollUI/Components/CountDownTimer.razor
@@ -1,32 +1,48 @@
 ﻿ 
-@if(Poll.TimeLimit is not null && Poll.StartTime < DateTime.Now)
+@if(!Poll.IsComplete)
 {
-    <div class="timer">
-        <p class="time-text">TIME LEFT :</p>
-        <div class="times">
-            <p class="time-unit-day">  @timeLimitDays.ToString("00") </p>
-            <p class="time-unit-hour">  @timeLimitHours.ToString("00") </p>
-            <p class="time-unit-min">   @timeLimitMinutes.ToString("00") </p>
-            <p class="time-unit-sec">  @timeLimitSeconds.ToString("00") </p>
+    if(Poll.TimeLimit is not null && Poll.StartTime < DateTime.Now)
+    {
+        <div class="timer">
+            <p class="time-text">TIME LEFT</p>
+            <div class="times">
+                <p class="time-unit-day">  @timeLimitDays.ToString("00") </p>
+                <p class="divider">|</p>
+                <p class="time-unit-hour">  @timeLimitHours.ToString("00") </p>
+                <p class="divider">|</p>
+                <p class="time-unit-min">   @timeLimitMinutes.ToString("00") </p>
+                <p class="divider">|</p>
+                <p class="time-unit-sec">  @timeLimitSeconds.ToString("00") </p>
+            </div>
         </div>
-    </div>
-}
-else if (Poll.TimeLimit is not null && Poll.StartTime > DateTime.Now)
-{
-    <div class="timer">
-        <p class="time-text">STARTS IN :</p>
-        <div class="times">
-            <p class="time-unit-day">  @startsInDays.ToString("00") </p>
-            <p class="time-unit-hour">  @startsInHours.ToString("00") </p>
-            <p class="time-unit-min">  @startsInMinutes.ToString("00") </p>
-            <p class="time-unit-sec">  @startsInSeconds.ToString("00") </p>
+    }
+    else if (Poll.TimeLimit is not null && Poll.StartTime > DateTime.Now)
+    {
+        <div class="timer">
+            <p class="time-text">STARTS IN</p>
+            <div class="times">
+                <p class="time-unit-day">  @startsInDays.ToString("00") </p>
+                <p class="divider">|</p>
+                <p class="time-unit-hour">  @startsInHours.ToString("00") </p>
+                <p class="divider">|</p>
+                <p class="time-unit-min">  @startsInMinutes.ToString("00") </p>
+                <p class="divider">|</p>
+                <p class="time-unit-sec">  @startsInSeconds.ToString("00") </p>
+            </div>
         </div>
-    </div>
+    }
+    else
+    {
+        <div class="timer">
+            <p class="clock-text">No Time Limit</p>
+        </div>
+    }
 }
+
 else
 {
     <div class="timer">
-        <p>No Time Limit</p>
+        <p class="clock-text">Poll Finished</p>
     </div>
 }
 
@@ -36,6 +52,9 @@ else
 
     [Parameter]
     public EventCallback PollComplete { get; set; }
+
+    [Parameter]
+    public EventCallback PollHasStarted { get; set; }
 
     private Timer _timeLimitTimer = new(1000);
 
@@ -52,7 +71,10 @@ else
         _timeLimitTimer.Elapsed += new ElapsedEventHandler(CountDownTimeLimit);
         _startsInTimer.Elapsed += new ElapsedEventHandler(CountDownStartsIn);
         if (Poll.StartTime < DateTime.Now)
+        {
+            Poll.HasStarted = true;
             _timeLimitTimer.Start();
+        }
         else if (Poll.StartTime > DateTime.Now)
             _startsInTimer.Start();
         await base.OnInitializedAsync();
@@ -97,6 +119,17 @@ else
 }
 
 <style>
+
+    .divider {
+        color: #000;
+    }
+
+    .clock-text {
+        font-size: 1.5em;
+        font-weight: 700;
+        margin-top: .35em;
+    }
+
     .times {
         display: flex;
         justify-content: space-evenly;
@@ -108,63 +141,60 @@ else
         display: flex;
         width: 50%;
         margin: 0 auto;
+        border: 2px solid #000;
+        padding: 10px;
+        border-radius: 6px;
+        box-shadow: inset 0 0 2.5px #000, inset 0 0 5px #000, inset 0 0 7.5px #000;
+        background-image: linear-gradient( 190deg, rgba(217, 27, 66, 0.2) 30%, rgba(69, 196, 150, 0.2) 60%);
     }
 
     .time-unit-day {
         font-weight: 700;
         font-size: 1.25em;
-                font-weight: 900;
-                        letter-spacing: .25em;
-                                                        text-shadow: 2px 2px 5px #000;
-
+        font-weight: 900;
+        letter-spacing: .25em;
+        text-shadow: 2px 2px 5px #000;
     }
 
     .time-unit-day::before {
-                font-weight: 700;
-
+        font-weight: 700;
         content: "Days";
         position: absolute;
         top: -1.75em;
-                transform: translateX(-4px);
-
+        transform: translateX(-4px);
         text-align: center;
         font-size: .75em;
-                letter-spacing: 0;
-                        text-transform: uppercase;
-
+        letter-spacing: 0;
+        text-transform: uppercase;
     }
 
     .time-unit-hour {
         font-weight: 700;
         font-size: 1.25em;
-                font-weight: 900;
-                        letter-spacing: .25em;
-                                text-shadow: 2px 2px 5px #000;
-
+        font-weight: 900;
+        letter-spacing: .25em;
+        text-shadow: 2px 2px 5px #000;
     }
 
     .time-unit-hour::before {
-                font-weight: 700;
-
+        font-weight: 700;
         content: "Hours";
         position: absolute;
         top: -1.75em;
-                transform: translateX(-8px);
-
+        transform: translateX(-9px);
         text-align: center;
         font-size: .75em;
-                letter-spacing: 0;
-                        text-transform: uppercase;
+        letter-spacing: 0;
+        text-transform: uppercase;
 
     }
 
     .time-unit-min {
-        font-weight: 700;
-        font-size: 1.25em;
-                font-weight: 900;
-                        letter-spacing: .25em;
-                                text-shadow: 2px 2px 5px #000;
-
+      font-weight: 700;
+      font-size: 1.25em;
+      font-weight: 900;
+      letter-spacing: .25em;
+      text-shadow: 2px 2px 5px #000;
     }
 
     .time-unit-min::before {
@@ -172,13 +202,11 @@ else
         content: "Mins";
         position: absolute;
         top: -1.75em;
-        transform: translateX(-2px);
+        transform: translateX(-4px);
         text-align: center;
         font-size: .75em;
         letter-spacing: 0;
-                text-transform: uppercase;
-
-
+        text-transform: uppercase;
     }
 
     .time-unit-sec {
@@ -193,12 +221,11 @@ else
         content: "Secs";
         position: absolute;
         top: -1.75em;
-        transform: translateX(-5px);
+        transform: translateX(-3px);
         text-align: center;
         font-size: .75em;
         letter-spacing: 0;
         text-transform: uppercase;
-
     }
 
     .time-text {
@@ -206,8 +233,16 @@ else
         font-weight: 700;
     }
 
-    //@@media(max-width: 770px) {
+    @@media(max-width: 991px) {
+        .timer {
+            width: 75%;
+        }
+    }
 
+    @@media(max-width: 360px) {
+        .timer {
+            width: 95%;
+        }
+    }
 
-    //}
 </style>
