--- a/QuickPollUI/Components/PollList.razor
+++ b/QuickPollUI/Components/PollList.razor
@@ -22,4 +22,10 @@
         grid-template-columns: 1fr 1fr;
         grid-gap: 20px;
     }
+
+    @@media(max-width: 1100px) {
+        .poll-list {
+            display: block;
+        }
+    }
 </style>
