--- a/QuickPollUI/wwwroot/css/site.css
+++ b/QuickPollUI/wwwroot/css/site.css
@@ -1,6 +1,8 @@
 @import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 @import url(https://fonts.googleapis.com/css?family=Poiret+One);
+@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=News+Cycle&display=swap');
 html, body {
     font-family: 'Arial' Helvetica Neue, Helvetica, sans-serif;
     background: #57595D;
@@ -44,41 +46,3 @@ html, body {
     }
 
 
-.percent {
-    height: 100%;
-    position: absolute;
-    box-sizing: border-box;
-    transition: .25s ease;
-}
-
-.percent-block {
-    display: flex;
-    justify-content: space-between;
-    padding: 10px 20px;
-}
-
-.answer {
-    background: #fafafa;
-    cursor: pointer;
-    margin: .25em auto;
-    position: relative;
-}
-
-    .answer:hover {
-        opacity: 0.6;
-    }
-
-.percent-even {
-    background: rgba(217, 27, 66, 0.3);
-    border-left: 4px solid #d91b42;
-}
-
-.percent-odd {
-    background: rgba(69, 196, 150, 0.3);
-    border-left: 4px solid #45c496;
-}
-
-p {
-    font-size: 14px;
-    color: #aaa;
-}
