--- a/QuickPollUI/Components/PollDetails.razor
+++ b/QuickPollUI/Components/PollDetails.razor
@@ -12,9 +12,7 @@
 
         @foreach (var option in Poll.OptionsList)
         {
-            <Tooltip Text="@GetTooltipText(option)"
-                    BgColor="#f0f">
-
+            <Tooltip Text="@GetTooltipText(option)" BgColor="#f0f">
                 <div @onclick="(() => option.VoteOrUndoVoteForOption(Poll, LoggedInUser, _pollService))" style="background: @GetAnswerBackgroundColor(option);" class="answer">
                     <div class="percent @GetPercentClass(option)" style="width: @(option.PollOptionVotes.GetPercentage(Poll.OptionsList.GetTotalVotes()))%"></div>
                     <span class="percent-block">
